--- a/res/layout/activity_ante_natal.xml
+++ b/res/layout/activity_ante_natal.xml
@@ -13,14 +13,14 @@
         android:layout_height="wrap_content"
         android:background="@drawable/border"
         android:clickable="False"
-        android:padding="5dip" >
+        android:padding="@dimen/padding_natal" >
 
         <TextView
             android:id="@+id/age_ante_natal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="@dimen/text_Xsmall" />
+            android:textSize="@dimen/text_natal_data" />
 
         <TextView
             android:layout_width="fill_parent"
@@ -28,8 +28,9 @@
             android:gravity="end"
             android:text="@string/age"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="@dimen/text_Xsmall"
-            android:textStyle="bold" />
+            android:textSize="@dimen/text_natal_field"
+            android:textStyle="bold"
+            android:textColor="@color/grey" />
     </TableRow>
 
     <TableRow
@@ -38,14 +39,14 @@
         android:layout_height="wrap_content"
         android:background="@drawable/border"
         android:clickable="False"
-        android:padding="5dip" >
+        android:padding="@dimen/padding_natal" >
 
         <TextView
             android:id="@+id/deliveryTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="@dimen/text_Xsmall" />
+            android:textSize="@dimen/text_natal_data" />
 
         <TextView
             android:layout_width="fill_parent"
@@ -53,8 +54,9 @@
             android:gravity="end"
             android:text="@string/edd"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="@dimen/text_Xsmall"
-            android:textStyle="bold" />
+            android:textSize="@dimen/text_natal_field"
+            android:textStyle="bold"
+            android:textColor="@color/grey" />
     </TableRow>
 
     <TableRow
@@ -63,14 +65,14 @@
         android:layout_height="wrap_content"
         android:background="@drawable/border"
         android:clickable="False"
-        android:padding="5dip" >
+        android:padding="@dimen/padding_natal" >
 
         <TextView
             android:id="@+id/gestation"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="@dimen/text_Xsmall" />
+            android:textSize="@dimen/text_natal_data" />
 
         <TextView
             android:layout_width="fill_parent"
@@ -78,34 +80,36 @@
             android:gravity="end"
             android:text="@string/gestation"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="@dimen/text_Xsmall"
-            android:textStyle="bold" />
+            android:textSize="@dimen/text_natal_field"
+            android:textStyle="bold"
+            android:textColor="@color/grey" />
     </TableRow>
 
-                <TableRow
-            android:id="@+id/button_last_period"
+    <TableRow
+        android:id="@+id/button_last_period"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/border"
+        android:clickable="False"
+        android:padding="@dimen/padding_natal" >
+
+        <TextView
+            android:id="@+id/last_period"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="@dimen/text_natal_data" />
+
+        <TextView
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/border"
-            android:clickable="False"
-            android:padding="5dip" >
-
-            <TextView
-                android:id="@+id/last_period"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textSize="@dimen/text_Xsmall" />
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="match_parent"
-                android:gravity="end"
-                android:text="@string/last_period"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textSize="@dimen/text_Xsmall"
-                android:textStyle="bold" />
-        </TableRow>
+            android:layout_height="match_parent"
+            android:gravity="end"
+            android:text="@string/last_period"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="@dimen/text_natal_field"
+            android:textStyle="bold"
+            android:textColor="@color/grey" />
+    </TableRow>
 
     <TableRow
         android:id="@+id/button_blood"
@@ -113,14 +117,14 @@
         android:layout_height="wrap_content"
         android:background="@drawable/border"
         android:clickable="False"
-        android:padding="5dip" >
+        android:padding="@dimen/padding_natal" >
 
         <TextView
             android:id="@+id/blood_group"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="@dimen/text_Xsmall" />
+            android:textSize="@dimen/text_natal_data" />
 
         <TextView
             android:layout_width="fill_parent"
@@ -128,8 +132,9 @@
             android:gravity="end"
             android:text="@string/blood_group"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="@dimen/text_Xsmall"
-            android:textStyle="bold" />
+            android:textSize="@dimen/text_natal_field"
+            android:textStyle="bold"
+            android:textColor="@color/grey" />
     </TableRow>
 
     <TableRow
@@ -138,14 +143,14 @@
         android:layout_height="wrap_content"
         android:background="@drawable/border"
         android:clickable="False"
-        android:padding="5dip" >
+        android:padding="@dimen/padding_natal" >
 
         <TextView
             android:id="@+id/rhesus"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="@dimen/text_Xsmall" />
+            android:textSize="@dimen/text_natal_data" />
 
         <TextView
             android:layout_width="fill_parent"
@@ -153,8 +158,9 @@
             android:gravity="end"
             android:text="@string/rhesus"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="@dimen/text_Xsmall"
-            android:textStyle="bold" />
+            android:textSize="@dimen/text_natal_field"
+            android:textStyle="bold"
+            android:textColor="@color/grey" />
     </TableRow>
 
     <TableRow
@@ -163,7 +169,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/border"
         android:clickable="False"
-        android:padding="5dip"
+        android:padding="@dimen/padding_natal"
         android:weightSum="1.0" >
 
         <TextView
@@ -173,7 +179,7 @@
             android:layout_weight="0.3"
             android:gravity="start"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="@dimen/text_Xsmall" />
+            android:textSize="@dimen/text_natal_data" />
 
         <TextView
             android:layout_width="fill_parent"
@@ -182,8 +188,9 @@
             android:gravity="end"
             android:text="@string/parity"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="@dimen/text_Xsmall"
-            android:textStyle="bold" />
+            android:textSize="@dimen/text_natal_field"
+            android:textStyle="bold"
+            android:textColor="@color/grey" />
 
         <ImageView
             android:layout_width="wrap_content"
@@ -193,34 +200,4 @@
             android:src="@drawable/ic_action_forward" />
     </TableRow>
 
-    <TableRow
-        android:id="@+id/obstretic_history"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/border"
-        android:padding="5dip"
-        android:weightSum="1.0" >
-
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.9" />
-
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.1"
-            android:gravity="end"
-            android:text="@string/obstretic_history"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="@dimen/text_Xsmall"
-            android:textStyle="bold" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:adjustViewBounds="true"
-            android:gravity="end"
-            android:src="@drawable/ic_action_forward" />
-    </TableRow>
 </LinearLayout>
