--- a/res/layout/activity_appointment_type_spinner.xml
+++ b/res/layout/activity_appointment_type_spinner.xml
@@ -28,13 +28,12 @@
         android:layout_height="wrap_content" />
 
     <Spinner
-        android:id="@+id/week_spinner"
+        android:id="@+id/day_spinner"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:entries="@array/weeks" />
+        android:layout_height="wrap_content" />
 
     <Spinner
-        android:id="@+id/day_spinner"
+        android:id="@+id/week_spinner"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
 </LinearLayout>
