--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -111,7 +111,7 @@
             android:layout_marginLeft="@dimen/padding_medium"
             android:layout_marginRight="@dimen/padding_medium"
             android:layout_weight="1.0"
-            android:background="@color/blue"
+            android:background="@color/lightBlue"
             android:text="@string/login" />
 
     </LinearLayout>
