--- a/res/values-v21/styles.xml
+++ b/res/values-v21/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- API 21+ theme. -->
     <style
         name="AppTheme" parent="android:Theme.Material.Light">
